--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <!-- EmailJS SDK -->
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <style>
         /* Custom styles to complement Tailwind */
         body {
@@ -143,7 +141,7 @@
                         I am deeply interested in the intersection of Artificial Intelligence and robust infrastructure. I enjoy building intelligent systems, from object detection models to generative AI chatbots, and ensuring they run smoothly in production-like environments.
                     </p>
                     <p>
-                        I'm eager to contribute my skills to a dynamic infrastructure team and continue learning and growing in the ever-evolving world of technology.
+                        I'm eager to contribute my skills to a a dynamic infrastructure team and continue learning and growing in the ever-evolving world of technology.
                     </p>
                 </div>
                 <div class="md:col-span-2 flex justify-center">
@@ -286,17 +284,10 @@
                 My inbox is always open. Whether you have a question, a project proposal, or just want to say hi, feel free to reach out. I'll do my best to get back to you!
             </p>
             
-            <!-- 
-                EMAILJS TROUBLESHOOTING CHECKLIST:
-                If "Failed to send message" appears, please check these things in your EmailJS account:
-                1.  Email Services: Make sure your Service ID ('service_a8cuwzj') is correct and the service (e.g., Gmail) is connected properly.
-                2.  Email Templates: Make sure your Template ID ('template_portfolio') is correct. The template must exist.
-                3.  Account -> Security: Make sure you have added the domain where this website is hosted to your list of allowed origins. If you are testing locally, this might be the cause of the error.
-            -->
-            <form id="contact-form" class="mt-8 max-w-xl mx-auto">
+            <form id="contact-form" action="https://formspree.io/f/movepqyk" method="POST" class="mt-8 max-w-xl mx-auto">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                    <input type="text" name="from_name" placeholder="Your Name" required class="w-full bg-gray-700 text-white p-3 rounded-md focus:outline-none focus:ring-2 focus:ring-cyan-400">
-                    <input type="email" name="from_email" placeholder="Your Email" required class="w-full bg-gray-700 text-white p-3 rounded-md focus:outline-none focus:ring-2 focus:ring-cyan-400">
+                    <input type="text" name="name" placeholder="Your Name" required class="w-full bg-gray-700 text-white p-3 rounded-md focus:outline-none focus:ring-2 focus:ring-cyan-400">
+                    <input type="email" name="email" placeholder="Your Email" required class="w-full bg-gray-700 text-white p-3 rounded-md focus:outline-none focus:ring-2 focus:ring-cyan-400">
                 </div>
                 <textarea name="message" placeholder="Your Message" rows="5" required class="w-full bg-gray-700 text-white p-3 rounded-md mt-4 focus:outline-none focus:ring-2 focus:ring-cyan-400"></textarea>
                 <button type="submit" class="mt-6 accent-bg text-black font-bold py-3 px-8 rounded-md hover:bg-opacity-80 transition-all duration-300">
@@ -316,13 +307,6 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            // --- EmailJS Initialization ---
-            (function() {
-                emailjs.init({
-                    publicKey: "pbl0VfIWoClWuZQyV", 
-                });
-            })();
-
             // --- Mobile Menu Toggle ---
             const mobileMenuButton = document.getElementById('mobile-menu-button');
             const mobileMenu = document.getElementById('mobile-menu');
@@ -393,26 +377,43 @@
                 });
             });
 
-            // --- EmailJS Form Submission ---
-            const contactForm = document.getElementById('contact-form');
-            const formStatus = document.getElementById('form-status');
+            // --- Formspree AJAX Submission ---
+            const form = document.getElementById('contact-form');
+            const status = document.getElementById('form-status');
 
-            contactForm.addEventListener('submit', function(event) {
+            async function handleSubmit(event) {
                 event.preventDefault();
-                formStatus.textContent = 'Sending...';
-                formStatus.classList.remove('text-green-400', 'text-red-400');
-
-                emailjs.sendForm('service_a8cuwzj', 'template_portfolio', this)
-                    .then(() => {
-                        formStatus.textContent = 'Message sent successfully!';
-                        formStatus.classList.add('text-green-400');
-                        contactForm.reset();
-                    }, (error) => {
-                        formStatus.textContent = 'Failed to send message. Please try again.';
-                        formStatus.classList.add('text-red-400');
-                        console.log('EMAILJS FAILED...', error);
-                    });
-            });
+                const data = new FormData(event.target);
+                fetch(event.target.action, {
+                    method: form.method,
+                    body: data,
+                    headers: {
+                        'Accept': 'application/json'
+                    }
+                }).then(response => {
+                    if (response.ok) {
+                        status.innerHTML = "Thanks for your submission!";
+                        status.classList.remove('text-red-400');
+                        status.classList.add('text-green-400');
+                        form.reset();
+                    } else {
+                        response.json().then(data => {
+                            if (Object.hasOwn(data, 'errors')) {
+                                status.innerHTML = data["errors"].map(error => error["message"]).join(", ")
+                            } else {
+                                status.innerHTML = "Oops! There was a problem submitting your form";
+                                status.classList.remove('text-green-400');
+                                status.classList.add('text-red-400');
+                            }
+                        })
+                    }
+                }).catch(error => {
+                    status.innerHTML = "Oops! There was a problem submitting your form";
+                    status.classList.remove('text-green-400');
+                    status.classList.add('text-red-400');
+                });
+            }
+            form.addEventListener("submit", handleSubmit)
         });
     </script>
 </body>
